--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,25 +1,48 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  align-content: space-evenly;
+  flex-shrink: 1;
 }
 
 .logo {
+  display: flex;
   font-size: 48px;
   font-weight: 900;
   color: tomato;
   background: white;
   padding: 4px 32px;
+  align-items:center;
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  margin-right: 25px;
 }
 
 a {
+  display: flex;
   font-size: 22px;
   background: white;
-  padding: 8px;
+  padding: 4px;
+  margin: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+
 }
+
+.left-links{
+  display: flex;
+  /* border: solid 19px blue; */
+    }
+
+  .right-links{
+    display: flex;
+    /* border: solid 19px red; */
+  
+  }
