--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -9,9 +9,12 @@ body {
 }
 
 .header {
+  display: flex;
+  justify-content: space-between;
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  padding: 8px;
 }
 
 .profile-image {
@@ -41,8 +44,27 @@ a {
   /* this removes the line under our links */
   text-decoration: none;
   color: rebeccapurple;
+  padding: 8px;
 }
 
 ul {
+  display: flex;
   list-style-type: none;
+  align-items: center;
+}
+
+.righty{
+  display: flex;
+  /* border: solid 2px blue; */
+  align-self: center;
+  gap: 16px;
+}
+
+.lefty{
+  display: flex;
+  /* border: solid 2px violet; */
+  gap:16px;
+  align-content: space-between;
+  align-items: center;
+  flex-grow: 1
 }
