--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -2,14 +2,43 @@ body {
   font-family: 'Courier New', Courier, monospace;
 }
 
-img {
-  width: 100px;
-  height: 100px;
+.flex-container{
+  display: flex;
+  justify-content: space-evenly;
+  /* border: solid 18px black; */
+  gap: 52px;
+}
+
+.flex-container img {
+  display: flex;
+  justify-content: center;
+  flex-flow:row wrap;
+  width: 200px;
+  height: 200px;
+}
+
+.flextext-container{
+  display: flex;
+  justify-content: space-evenly;
+  /* border: 18px solid blue; */
+  gap: 52px;
+}
+
+.text{
+  display:flex;
+  text-align: center;
+  flex-wrap: wrap;
+  /* border: solid pink 1px; */
+  width: 200px;
+  height: 200px;
 }
 
 .title {
+  display: flex;
+  justify-content: center;
   font-size: 36px;
   font-weight: 900;
+  margin-bottom: 32px;
 }
 
 /* do not edit this footer */
