--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -1,29 +1,93 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  margin: 0;
+   margin: 0;
   min-height: 100vh;
+  
 }
 
 .header {
+  /* display: flex; */
+  /* align-self: flex-start; */
+  font-size: 32px;
+  font-weight: 900;
   height: 72px;
   background: darkmagenta;
   color: white;
+  padding-left: 16px;
+  /* border: solid 2px blue; */
 }
 
 .footer {
   height: 72px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* border: solid 2px blue; */
   background: #eee;
   color: darkmagenta;
 }
 
 .sidebar {
+  display: flex;
+  justify-content: space-between;
   width: 300px;
+  height: auto;
   background: royalblue;
   box-sizing: border-box;
+  /* border: solid 2px purple; */
+  flex-shrink: 0;
+  font-size: 24px;
+  padding: 16px;
+  align-items: flex-start;
+  
 }
 
 .card {
   border: 1px solid #eee;
+  display: flex;
+  flex-wrap: wrap;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  width: 300px;
+  height: 400px;
+  padding: 48px;
+  /* margin-left: 500px; */
+  flex-grow: 1;
+ 
 }
+
+.content{
+  display: flex;
+  /* flex-flow: column wrap; */
+  /* border: solid 15px black; */
+}
+
+.card-placement{
+  /* border: solid 2px green; */
+  display: flex;
+  width: auto;
+  height: auto;
+  flex: 1;
+  /* gap: 16px; */
+  /* flex-flow: column wrap; */
+  /* padding: 48px; */
+}
+
+a{
+  color: white;
+  text-decoration: none;
+}
+
+ul{
+  list-style-type: none;
+}
+
+.card-size{
+  display: flex;
+  /* border: solid 2px black; */
+  gap: 26px;
+  flex-wrap: wrap;
+  padding: 48px;
+  width: auto;
+  height: autos;
+  }
